@@ -109,7 +109,8 @@
     <Translation ID="PRR_OPTION_OTH" String="Non-RICO growable buildings" />>
     <Translation ID="PRR_OPTION_DEM" String="Demolition options (doesn't affect historical buildings)" />
     <Translation ID="PRR_OPTION_BDZ" String="Ask before bulldozing plopped RICO buildings" />
-    <Translation ID="PRR_OPTION_IMP" String="Allow plopped RICO buildings to be auto-bulldozed and built over (e.g. when building roads or placing buildings)" />
+    <Translation ID="PRR_OPTION_IMP" String="Allow plopped RICO buildings to be auto-bulldozed" />
+    <Translation ID="PRR_OPTION_IMP2" String="(e.g. when placing roads or other buildings)" />
     <Translation ID="PRR_OPTION_CST" String="Cost options" />
     <Translation ID="PRR_OPTION_COV" String="Override building cost" />
     <Translation ID="PRR_OPTION_CPH" String="Cost per household" />
